--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ For reference: https://docs.emmet.io/cheat-sheet/ for function shortcuts -->
       </table>
 <hr>
 <!-- NOTE: Adding links to website sub pages -->
-    <p><a href="Hobbies.html"><h4>Hobbies</h4></a></p>
-    <p><a href="Contact.html"><h4>Contact</h4></a></p>
+    <p><a href="hobbies.html"><h4>Hobbies</h4></a></p>
+    <p><a href="contact.html"><h4>Contact</h4></a></p>
 
   </body>
 </html>
