Changing title to lowercase

--- a/hobbies.html
+++ b/hobbies.html
@@ -11,6 +11,6 @@
       <li><a href="https://www.instagram.com/krave.classics.jewelry/?hl=en">Jewelry making</a></li>
       <li>Napping</li>
     </ol>
-    <p><a href="Index.html">Home</a></p>
+    <p><a href="index.html">Home</a></p>
   </body>
 </html>
