Changing title to lowercase

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,6 @@
       <input type="submit"> <!-- NOTE: inserts submit button -->
     </form>
   <br>
-  <p><a href="Index.html">Home</a></p>
+  <p><a href="index.html">Home</a></p>
   </body>
 </html>
